# vida

./: .gitignore  AGENTS.md  LICENSE  justfile
app/: biome.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
app-electron/: biome.json  components.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
app-slint/: Cargo.toml  build.rs
app-tauri/: biome.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
app-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/permissions/autogenerated/: add_recent_executable.toml  disassemble_linear.toml  engine_request.toml  get_linear_rows.toml  get_module_analysis_status.toml  get_title_bar_menu_model.toml  get_window_chrome_state.toml  invoke_title_bar_menu_action.toml  pick_executable.toml  ping_engine.toml  unload_module.toml  window_control.toml
app-tauri/src-tauri/src/: engine.rs  main.rs
docs/: README.md  change_files.md  electron_disassembler_project_scope.md  engine_benchmarking.md  renderer_styling.md  work_log.md  (+1 more)
engine/: Cargo.toml
engine/benches/: analysis_bench.rs
engine/src/: analysis.rs  api.rs  cfg.rs  disasm.rs  error.rs  lib.rs  linear.rs  main.rs  pdb_symbols.rs  pe_utils.rs  protocol.rs  rpc.rs  state.rs  tests.rs
engine/tests/: contract_schema_tests.rs  engine_integration.rs
engine/tests/fixtures/: README.md  generate_bench_fixtures.py
(+141 files in other folders)
