[package]
name = "engine"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
goblin = "0.9.3"
iced-x86 = "1.21.0"
msvc-demangler = "0.11.0"
pdb = "0.8.0"
rustc-demangle = "0.1.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"

[dev-dependencies]
jsonschema = "0.30.0"
criterion = "0.5"

[[bench]]
name = "analysis_bench"
harness = false
