[package]
name = "app-tauri"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
thiserror = "2.0.12"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dev-dependencies]
tempfile = "3.23.0"
